--- a/Impedance Spectrocopy/Impedance Spec Lab Notebook.ipynb
+++ b/Impedance Spectrocopy/Impedance Spec Lab Notebook.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1ed06a02",
+   "execution_count": 18,
+   "id": "7c6f339e",
    "metadata": {},
    "outputs": [
     {
@@ -18,6 +18,7 @@
    "source": [
     "import numpy as np \n",
     "import matplotlib.pyplot as plt \n",
+    "%matplotlib inline\n",
     "\n",
     "R0a = 9824 #Ohms\n",
     "sigma_R0a = 1 #Ohm \n",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a50cb094",
+   "id": "a329a071",
    "metadata": {},
    "source": [
     "# Data with R0a\n",
@@ -52,18 +53,15 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dd659aee",
+   "id": "52654c10",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "freqs = np.array([100, 200, 400, 600, 800, 1000, 2000, 4000, 6000, 8000, 10000])\n",
-    "V = np.array([14.3, ])\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f9c1f1f4",
+   "id": "78480a76",
    "metadata": {},
    "outputs": [
     {
@@ -77,14 +75,12 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "(1000 - 100)/5"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dec4cdb2",
+   "id": "fb2dd07a",
    "metadata": {},
    "outputs": [],
    "source": []
