fuck this lab bruh

--- a/Langmuir Probe/data/langmuirprobe (2).ipynb
+++ b/Langmuir Probe/data/langmuirprobe (2).ipynb
@@ -311,6 +311,7 @@
     "def func(x,a,b): return a*x+b\n",
     "\n",
     "popt, pcov = curve_fit(func, xdata[17:120], logydata[17:120], p0=[1.0,1.0]) ##p0=initial guess for a,b\n",
+    "\n",
     "print(popt)\n",
     "\n",
     "x_model = xdata[17:120]\n",
@@ -388,7 +389,7 @@
     "e = 1.602176634E-19\n",
     "i = popt[0]**-1\n",
     "print(i)\n",
-    "print(i*(e/k))\n"
+    "print(i*(e/k))"
    ]
   },
   {
