Final langmuir probe

--- a/Langmuir Probe/Data Analysis Final - Langmuir Probe .ipynb
+++ b/Langmuir Probe/Data Analysis Final - Langmuir Probe .ipynb
@@ -171,7 +171,7 @@
     "print()\n",
     "print(f'I_es_min = {i_data_1[100]} A')\n",
     "print(f'I_es_max = {max(i_data_1)} A')\n",
-    "print(f'I_es = {(max(i_data_1) + i_data_1[100])/2:0.9f} A +/- {abs(max(i_data_1) - i_data_1[100])/2:0.9f} A')\n"
+    "print(f'I_es = {(max(i_data_1) + i_data_1[100])/2:0.9f} A +/- {abs(max(i_data_1) - i_data_1[100])/2:0.9f} A')"
    ]
   },
   {
@@ -354,7 +354,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "electron density: n_e = 567810752146647 +/- 288174825282869\n"
+      "electron density: n_e = 567810752146647 +/- 288174825282869\n",
+      "Total molecualr density: n/V = 2.2900217217644483e-05\n"
      ]
     }
    ],
@@ -377,7 +378,13 @@
     "\n",
     "sigma_n_e = np.sqrt((sigma_Ies*4/(e*A*v_e)**2 + (sigma_v_e*(2*I_es/(e*A*v_e**2)))**2))\n",
     "\n",
-    "print(f'electron density: n_e = {round(n_e)} +/- {round(sigma_n_e)}')"
+    "P = 420*(1/1000)*(133.3) # mTorr to Pascals\n",
+    "R = 8.3145 #mol^-1 K^-1\n",
+    "\n",
+    "molecular_density = P/(R*T_e1) \n",
+    "\n",
+    "print(f'electron density: n_e = {round(n_e)} +/- {round(sigma_n_e)}')\n",
+    "print(f'Total molecualr density: n/V = {molecular_density}')"
    ]
   },
   {
@@ -463,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "450eff94",
    "metadata": {
     "scrolled": false
@@ -535,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a0f0ec12",
    "metadata": {
     "scrolled": false
@@ -585,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "f0bda3ed",
    "metadata": {
     "scrolled": false
@@ -633,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "8ec8b66a",
    "metadata": {
     "scrolled": false
@@ -769,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "69c93c06",
    "metadata": {
     "scrolled": false
@@ -822,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "3885dcf1",
    "metadata": {
     "scrolled": false
