--- a/Langmuir Probe/Data Analysis Final - Langmuir Probe .ipynb
+++ b/Langmuir Probe/Data Analysis Final - Langmuir Probe .ipynb
@@ -79,7 +79,7 @@
     "\n",
     "$$$$\n",
     "\n",
-    "$$ln(I_{e}) = \\frac{q_{e}V_B}{kT_e} - \\frac{q_{e}V_P}{kT_e} + ln(V_{es}) = \\frac{q_{e}V_B}{kT_e} + b$$\n",
+    "$$ln(I_{e}) = \\frac{q_{e}V_B}{kT_e} - \\frac{q_{e}V_P}{kT_e} + ln(I_{es}) = \\frac{q_{e}V_B}{kT_e} + b$$\n",
     "\n",
     "$$$$\n",
     "\n",
